# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.23.2
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- New cache method metadata-md5 to support metadata/md5-cache
	  in overlays
	- eix-update: Add option -v (and UPDATE_VERBOSE) for printing
	  effective cache method for every ebuild
	- scripts: Handle quoting of spaces in PORTDIR_OVERLAY properly
	- scripts: Do not rely on portageq being available
	- eix-functions.sh: Add PushEscaped, InitPortdirOverlay

*eix-0.23.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Support basic /etc/portage/package.license checking
	- Add rudimentary bash-completion of
	  Marcel Philipp Partap <marcel.partap at rwth-aachen.de>, see
	  http://bugs.gentoo.org/show_bug.cgi?id=304819
	- Avoid install -D (does not work on BSD), see
	  http://bugs.gentoo.org/show_bug.cgi?id=382539

*eix-0.23.0
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Make profiles/* files default only on their repositories, see
	  http://bugs.gentoo.org/show_bug.cgi?id=380979
	  This required a major code reorganization
	- Bugfix: Let -... in /etc/portage/package.accept_keywords remove
	  previous keywords of /etc/portage/package.accept_keywords
	- Use a function-call for testing *FLAGS (e.g. -fstack-protector), see
	  http://bugs.gentoo.org/show_bug.cgi?id=379717
	  Thanks to Dustin Polke for helping with debugging this issue
	- Cosmetic code changes

*eix-0.22.11
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Bugfix: Let -... in /etc/portage/package.accept_keywords remove
	  ACCEPT_KEYWORDS, see http://bugs.gentoo.org/show_bug.cgi?id=378767
	- eix-test-obsolete: Set DEFAULT_FORMAT=compact instead using -c
	  (chooses compact format absolutely, not toggling...), see http://
	  developer.berlios.de/bugs/?func=detailbug&bug_id=18284&group_id=11597

*eix-0.22.10
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Add -Wl,-z,noexecstack with strong-optimization and security: